--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -920,7 +920,12 @@ footer {
         position: absolute;
         z-index: 10;
         width: 100%;
-        top: -60%;
+        top: 20%;
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
+        margin-top: 0px !important;
+        margin-bottom: 0px !important;
+
     }
 
     .banner-content h1 {
